--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ChatIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatApp</title>
+    <title>ChatApp P2P</title>
+    <meta name="theme-color" content="#f3f4f6">
   </head>
   <body>
     <div id="root"></div>
